[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "gerrit-checks-mock-fetch-endpoint"
readme = "README.md"
version = "0.0.0"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pylint",
]

[[project.authors]]
name = "Alon Bar-Lev"
email = "alon.barlev@gmail.com"

[tool.setuptools.packages.find]
include = [
    "gerrit_checks_mock_fetch_endpoint*",
]

[tool.black]
line-length = 120

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
explicit_package_bases = true
namespace_packages = true
no_implicit_optional = true
show_error_codes = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.pylint.MASTER]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "black"
atomic = true
combine_as_imports = true

[tool.check-manifest]
ignore = [
    "*.egg-info",
    "*.egg-info/*",
    "PKG-INFO",
]
ignore-default-rules = true
